swagger customer
